making code chunks appear for copying and pasting

--- a/session1_intro_to_mathematical_modelling/session1_intro_to_mathematical_modelling.qmd
+++ b/session1_intro_to_mathematical_modelling/session1_intro_to_mathematical_modelling.qmd
@@ -151,7 +151,7 @@ This is a practical session in which, individually or as part of a group, you wi
 ## Recording results in R
 Here is some code to record and plot your results in R. Open RStudio, open from your folder "lesson1_introduction_beans.R" using the Session tab, Set Working Directory / To Source File Location. Copy and paste the code chunk below into your editor. Then replace the default results with your own.
 
-```{r bean-plot}
+```{r bean-plot, echo=T, eval=T}
 # Mathematical Modelling of Infectious Diseases
 ###################################################
 ## INTRODUCTION TO MATHEMATICAL MODELLING PRACTICAL SESSION## 
@@ -184,7 +184,7 @@ result[,4]<-c(0,  1,  3,  7, 11, 15, 18, 19, 19, 19) # R
 ## Plotting results in R
 Copy and paste the code chunk below into your editor to plot your results:
 
-```{r plot-beans}
+```{r plot-beans, echo=T, eval=T}
 #| warning: false
 library(ggplot2)
 ggplot() +
